--- a/style.css
+++ b/style.css
@@ -530,6 +530,8 @@ photo/video styles
             color: white;
             padding: 10px;
             z-index: 100000;
+            position: -webkit-sticky; /* Safari */
+            position: sticky; /* Safari */
             
 }
 
